--- a/app/src/main/res/layout/fragment_categoris.xml
+++ b/app/src/main/res/layout/fragment_categoris.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/background"
     android:padding="12dp">
 
@@ -10,10 +11,10 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
         android:text="Pick your categories of interest"
         android:textSize="22dp"
         android:textStyle="bold"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toTopOf="@id/categories_recycler"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,14 +25,14 @@
         android:id="@+id/categories_recycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="15dp"
         android:foregroundGravity="center"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title"
-        app:spanCount="2" />
+        android:layout_marginTop="8dp"
+        app:spanCount="2"
+        tools:listitem="@layout/item_categroy_left_side" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
