--- a/app/src/main/res/layout/item_categroy_left_side.xml
+++ b/app/src/main/res/layout/item_categroy_left_side.xml
@@ -1,37 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/parent"
-    style="@style/LiftSideCardView"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/child"
-        android:layout_height="wrap_content"
+    <data>
+
+        <variable
+            name="model"
+            type="com.abdo.news.ui.fragment.categories.Category" />
+    </data>
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/parent"
+        style="@style/LiftSideCardView"
         android:layout_width="match_parent"
-        android:padding="8dp"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:changeBackgroundColor="@{model.backgroundColor}">
 
-        <ImageView
-            android:id="@+id/categories_logo"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/sports_logo" />
-
-        <TextView
-            android:id="@+id/title_of_category"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/child"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="sports"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/categories_logo" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:padding="8dp"
+            app:layout_constraintTop_toTopOf="parent">
 
-</com.google.android.material.card.MaterialCardView>
+            <ImageView
+                android:id="@+id/categories_logo"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                app:imageResource="@{model.imageId}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/title_of_category"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{model.titleId}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/categories_logo" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+</layout>
