--- a/app/src/main/res/layout/item_categroy_right_side.xml
+++ b/app/src/main/res/layout/item_categroy_right_side.xml
@@ -1,49 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/parent"
+    style="@style/RightSideCardView"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp">
 
-    <data>
-
-        <variable
-            name="model"
-            type="com.abdo.news.ui.fragment.categories.Category" />
-    </data>
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/parent"
-        style="@style/RightSideCardView"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/child"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:changeBackgroundColor="@{model.backgroundColor}">
+        android:padding="8dp"
+        app:layout_constraintTop_toTopOf="parent"
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/child"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
+        >
+
+        <ImageView
+            android:id="@+id/categories_logo"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/sports_logo" />
 
-            >
+        <TextView
+            android:id="@+id/title_of_category"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="sports"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/categories_logo" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <ImageView
-                android:id="@+id/categories_logo"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                app:imageResource="@{model.imageId}"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/title_of_category"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{model.titleId}"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/categories_logo" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </com.google.android.material.card.MaterialCardView>
-</layout>
+</com.google.android.material.card.MaterialCardView>
