--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -5,6 +5,9 @@
 
     <data>
 
+        <variable
+            name="vm"
+            type="com.abdo.news.ui.fragment.news.NewsFragment" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
